--- a/client/main.html
+++ b/client/main.html
@@ -4,18 +4,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+    <noscript>
+        <style type="text/css">
+            #app {
+                display: none;
+            }
+            body {
+                background-color: #00a3bc;
+                color: #FFFFFF;
+                text-align: center;
+                padding: 150px 100px 0 100px;
+                font-size: 16px;
+            }
+        </style>
+        <div class="noscriptmsg">
+            JavaScript must be enabled in order for you to view this website. However, it seems JavaScript is either
+            disabled or not supported by your browser. Enable JavaScript by changing your browser options, then try again.
+        </div>
+    </noscript>
 </head>
 
 <body>
-    <div id="app"></div>
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<div id="app"></div>
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-66485739-7', 'auto');
-        ga('send', 'pageview');
+    ga('create', 'UA-66485739-7', 'auto');
+    ga('send', 'pageview');
 
-    </script>
+</script>
 </body>
