--- a/client/main.html
+++ b/client/main.html
@@ -1,14 +1,17 @@
 <head>
-    <title>UN Data Visualization</title>
+    <title>Knowledge 4 All | Data Visualization</title>
     <meta http-equiv="X-UA-Compatible" content="IE=9;IE=10;IE=Edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" href="/favicon.ico?v=2" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
     <noscript>
         <style type="text/css">
+
             #app {
                 display: none;
             }
+
             body {
                 background-color: #00a3bc;
                 color: #FFFFFF;
@@ -16,10 +19,12 @@
                 padding: 150px 100px 0 100px;
                 font-size: 16px;
             }
+
         </style>
         <div class="noscriptmsg">
             JavaScript must be enabled in order for you to view this website. However, it seems JavaScript is either
-            disabled or not supported by your browser. Enable JavaScript by changing your browser options, then try again.
+            disabled or not supported by your browser. Enable JavaScript by changing your browser options, then try
+            again.
         </div>
     </noscript>
 </head>
